enable preview removed 2.0