@@ -42,21 +42,3 @@ tasks.jacocoTestReport {
 application {
     mainClass.set("hexlet.code.App")
 }
-
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--enable-preview")
-}
-
-tasks.withType<Test>().configureEach {
-    jvmArgs?.add("--enable-preview")
-}
-
-tasks.withType<JavaExec>().configureEach {
-    jvmArgs?.add("--enable-preview")
-}
-
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))
-    }
-}
